--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div {
+  margin-bottom: 16px;
+}
+
+#video-container {
+  line-height: 0;
+}
+
+
+
+#video-container {
+  position: relative;
+  width: max-content;
+  height: max-content;
+  overflow: hidden;
+}
+#video-container .scan-region-highlight {
+  border-radius: 30px;
+  outline: rgba(0, 0, 0, .25) solid 50vmax;
+}
+#video-container .scan-region-highlight-svg {
+  display: none;
+}
+#video-container .code-outline-highlight {
+  stroke: rgba(255, 255, 255, .5) !important;
+  stroke-width: 15 !important;
+  stroke-dasharray: none !important;
+}
+
+hr {
+  margin-top: 32px;
+}
+table, th, td {
+  border: 1px solid black;
+  /* border-collapse: collapse; */
+}
+
